wrap up foundational logic, setup word of the day from the actual words list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wordle"
+        android:name=".WordleApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
