--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.1.0-rc01'
+        kotlin_version = "1.6.0"
+        hilt_version = '2.38.1'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.0-alpha03' apply false
-    id 'com.android.library' version '7.2.0-alpha03' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    repositories {
+        google()
+        mavenCentral()
+//        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.0-beta02'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 task clean(type: Delete) {
