--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,3 +8,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build the app
         run: ./gradlew build
+
+      - name: Upload build outpus (APKs)
+        uses: actions/upload-artifact@v2
+        with:
+            name: build-outputs
+            path: app/build/outputs
