--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:name=".WordleApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.WordleActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Wordle">
